--- a/views/layout.html
+++ b/views/layout.html
@@ -12,6 +12,7 @@
     <style>
         body {
             font-family: Arial;
+            background-color: grey;
         }
 
         /**
@@ -156,15 +157,34 @@
         }
 
         button {
-            width: 200px;
-            height: 40px;
-            background-color: #E84610;
-            border: 1px solid grey;
-            color: white;
-            text-transform: uppercase;
-            margin: 10px;
+            align-items: center;
+            background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
+            border: 0;
             border-radius: 8px;
-        }
+            box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+            box-sizing: border-box;
+            color: #FFFFFF;
+            display: flex;
+            font-family: Phantomsans, sans-serif;
+            font-size: 20px;
+            justify-content: center;
+            line-height: 1em;
+            max-width: 100%;
+            min-width: 140px;
+            padding: 19px 24px;
+            text-decoration: none;
+            user-select: none;
+            -webkit-user-select: none;
+            touch-action: manipulation;
+            white-space: nowrap;
+            cursor: pointer;
+}
+
+.button:active,
+.button:hover {
+  outline: 0;
+}
+
     </style>
 </head>
 
