Style: terminal and button, add image to body

--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,9 @@
 <body>
-    <button onclick="window.location.reload()">Run Program</button>
+    <header>
+        <h1>Travel Guide - Currency Converter</h1>
+    </header>
+
+    <button onclick="window.location.reload()">Start Guide</button>
     <div id="terminal"></div>
 
     <script>
