--- a/views/layout.html
+++ b/views/layout.html
@@ -8,11 +8,46 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/xterm.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xterm/3.14.5/addons/attach/attach.js"></script>
-    <title>Python Terminal by Code Institute</title>
+    <title>Travel Guide - Currency Converter</title>
     <style>
         body {
             font-family: Arial;
-            background-color: grey;
+            color: #191102;
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: auto;
+            height: 100vh;
+            background-color: #BBD8B3;
+            background: url('../docs/images/background-image.png');
+            background-size: cover;
+        }
+
+        header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            z-index: +1;
+            top: 10px;
+        }
+
+        h1 {
+            display: flex;
+            justify-content: center;
+            font-size: 70px;
+            width: 100%;
+            align-items: center;
+            background: #f5f5f57d;
+        }
+        
+        /* terminal */
+        #terminal {
+            z-index: +1;
+            position: absolute;
+            top: 450px;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
 
         /**
