Update: background to be displayed behind terminal

--- a/views/layout.html
+++ b/views/layout.html
@@ -20,7 +20,7 @@
             width: auto;
             height: 100vh;
             background-color: #BBD8B3;
-            background: url('../docs/images/background-image.png');
+            background-image: url('../docs/images/background-image.png');
             background-size: cover;
         }
 
@@ -40,13 +40,14 @@
             align-items: center;
             background: #f5f5f57d;
         }
-        
+
         /* terminal */
         #terminal {
             z-index: +1;
             position: absolute;
             top: 450px;
             left: 50%;
+            width: 900px;
             transform: translate(-50%, -50%);
         }
 
