Add: icon to header h1 title and image to background behind terminal

--- a/views/layout.html
+++ b/views/layout.html
@@ -19,8 +19,7 @@
             align-items: center;
             width: auto;
             height: 100vh;
-            background-image: url('../docs/images/background-image.png');
-            background-size: cover;
+            background: url("https://raw.githubusercontent.com/KimBergstroem/PP3/main/views/images/background-image.webp") no-repeat center /cover;
         }
 
         header {
