--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,8 @@
 <body>
     <header>
+        <img src="https://raw.githubusercontent.com/KimBergstroem/PP3/main/views/images/favicon-globe.png" alt="icon image world globe">
         <h1>Travel Guide - Currency Converter</h1>
+        <img src="https://raw.githubusercontent.com/KimBergstroem/PP3/main/views/images/favicon-globe.png" alt="icon image world globe">
     </header>
 
     <button onclick="window.location.reload()">Start Guide</button>
