Styled: title style once again and image responsiveness

--- a/views/index.html
+++ b/views/index.html
@@ -1,11 +1,12 @@
 <body>
-    <header>
+    <div id="title">
         <img src="https://raw.githubusercontent.com/KimBergstroem/PP3/main/views/images/favicon-globe.png" alt="icon image world globe">
         <h1>Travel Guide - Currency Converter</h1>
         <img src="https://raw.githubusercontent.com/KimBergstroem/PP3/main/views/images/favicon-globe.png" alt="icon image world globe">
-    </header>
+    </div>
 
     <button onclick="window.location.reload()">Start Guide</button>
+
     <div id="terminal"></div>
 
     <script>
