--- a/views/layout.html
+++ b/views/layout.html
@@ -11,43 +11,41 @@
     <title>Travel Guide - Currency Converter</title>
     <style>
         body {
-            font-family: Arial;
-            color: #191102;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: auto;
-            height: 100vh;
             background: url("https://raw.githubusercontent.com/KimBergstroem/PP3/main/views/images/background-image.webp") no-repeat center /cover;
-        }
-
-        header {
+            font-family: Arial;
+            margin: 0;
+	        width: 100vw;
+	        height: 100vh;
             display: flex;
-            justify-content: space-between;
+            align-content: center;
+            flex-direction: column;
+            justify-content: flex-start;
             align-items: center;
-            z-index: +1;
-            top: 10px;
         }
-
-        h1 {
+        
+        #title{
             display: flex;
-            justify-content: center;
-            font-size: 70px;
             width: 100%;
+            height: 100px;
+            margin-top: 35px;
+            color: #000000;
+            font-size: 150%;
+            text-align: center;
+            justify-content: center;
+            flex-direction: row;
             align-items: center;
-            background: #f5f5f57d;
         }
 
-        /* terminal */
-        #terminal {
-            z-index: +1;
-            position: absolute;
-            top: 450px;
-            left: 50%;
-            width: 900px;
-            transform: translate(-50%, -50%);
+        #title img {
+            margin: 0 30px;
+            height: 50%;
         }
+
+        #terminal {
+            margin: 50px;
+            border: 5px solid orange;
+        }
+
 
         /**
         * Default styles for xterm.js
@@ -191,34 +189,24 @@
         }
 
         button {
-            align-items: center;
-            background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
-            border: 0;
-            border-radius: 8px;
-            box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
-            box-sizing: border-box;
-            color: #FFFFFF;
-            display: flex;
-            font-family: Phantomsans, sans-serif;
-            font-size: 20px;
-            justify-content: center;
-            line-height: 1em;
-            max-width: 100%;
-            min-width: 140px;
-            padding: 19px 24px;
-            text-decoration: none;
-            user-select: none;
-            -webkit-user-select: none;
-            touch-action: manipulation;
-            white-space: nowrap;
-            cursor: pointer;
-}
+            width: 200px;
+            height: 50px;
+            font-family: 'Merriweather', serif;
+            font-size: 110%;
+            background-color: #EDB34B;
+            border: 1px solid #142233;
+            color: #142233;
+            text-transform: uppercase;
+            margin-top: 20px;
+            border-radius: 10px;
+            padding: 10px;
+        }
 
-.button:active,
-.button:hover {
-  outline: 0;
-}
-
+        @media screen and (max-width:600px) {
+            #title {
+            font-size: 95%;
+            }
+        }   
     </style>
 </head>
 
