Styled: 15px border orange to terminal box

--- a/views/layout.html
+++ b/views/layout.html
@@ -43,7 +43,7 @@
 
         #terminal {
             margin: 50px;
-            border: 5px solid orange;
+            border: 15px solid orange;
         }
 
 
@@ -193,7 +193,7 @@
             height: 50px;
             font-family: 'Merriweather', serif;
             font-size: 110%;
-            background-color: #EDB34B;
+            background-color: orange;
             border: 1px solid #142233;
             color: #142233;
             text-transform: uppercase;
