Styled: Add bold, underline and more visual style

--- a/views/layout.html
+++ b/views/layout.html
@@ -21,6 +21,8 @@
             flex-direction: column;
             justify-content: flex-start;
             align-items: center;
+            scrollbar-width: thin;          /* "auto" or "thin" */
+            scrollbar-color: blue orange;   /* scroll thumb and track */ 
         }
         
         #title{
@@ -43,7 +45,7 @@
 
         #terminal {
             margin: 50px;
-            border: 15px solid orange;
+            border: 20px solid orange;
         }
 
 
